--- a/src/app/alino-app/components/config-modal/AccountConfigSection.module.css
+++ b/src/app/alino-app/components/config-modal/AccountConfigSection.module.css
@@ -9,7 +9,7 @@
 .sectionContainer {
   display: flex;
   justify-content: center;
-  align-items: start;
+  align-items: flex-start;
   flex-direction: column;
   gap: 5px;
 }
