--- a/src/app/(auth)/(access)/Layout.module.css
+++ b/src/app/(auth)/(access)/Layout.module.css
@@ -9,13 +9,29 @@
   background-repeat: repeat;
   background-position: top left;
   background-size: 200px;
-  background-color: rgb(245, 245, 245);
+  background-color: var(--background-alino-app);
+  padding: 20px 120px;
+}
+
+.layout::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-color: var(--background-container);
+  -webkit-mask-image: url("/pattern.svg");
+  mask-image: url("/pattern.svg");
+  -webkit-mask-repeat: repeat;
+  mask-repeat: repeat;
+  -webkit-mask-size: 200px;
+  mask-size: 200px;
+  opacity: 0.2;
 }
 
 .contentContainer {
   position: relative;
   width: 100%;
   height: 100%;
+  min-height: 400px;
   max-width: 1366px;
   display: flex;
   flex-direction: column;
@@ -26,22 +42,24 @@
 
 .backLinkContainer {
   position: absolute;
-  top: 20px;
-  left: 120px;
   width: fit-content;
   height: fit-content;
+  top: 0;
+  left: 0;
 }
 
 .authForm {
   position: relative;
   min-width: 400px;
   max-width: 400px;
-  background-color: rgb(255, 255, 255);
+  background-color: var(--background-container);
   padding: 40px 30px;
   border-radius: 15px;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
-  border: 1px solid rgb(240, 240, 240);
+  border: 1px solid var(--border-container-color);
   overflow: hidden;
   box-shadow:
     0 4px 12px rgba(12, 20, 66, 0.02),
@@ -49,9 +67,18 @@
     inset 0 0 0 0 #e6e9ed;
 }
 
-@media (max-width: 640px) {
-  .contentContainer {
-    padding: 0 20px;
+.backgroundBlur {
+  position: absolute;
+  width: 100%;
+  height: auto;
+  filter: saturate(200%);
+  pointer-events: none;
+  opacity: 0.5;
+}
+
+@media only screen and (max-width: 650px) {
+  .layout {
+    padding: 20px 20px;
   }
 
   .authForm {
@@ -59,17 +86,14 @@
     min-width: initial;
     max-width: initial;
   }
-
-  .backLinkContainer {
-    left: 20px;
-  }
 }
 
 @media only screen and (max-width: 850px) and (display-mode: standalone) {
-  .backLinkContainer {
-    display: none;
-  }
   .layout {
     height: calc(100svh + env(safe-area-inset-top));
+  }
+
+  .backLinkContainer {
+    display: none;
   }
 }
