--- a/src/app/alino-app/components/sidebar/home-card/HomeCard.module.css
+++ b/src/app/alino-app/components/sidebar/home-card/HomeCard.module.css
@@ -5,7 +5,7 @@
   height: 45px;
   width: 100%;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   padding: 7px 10px 7px 15px;
   gap: 5px;
@@ -50,7 +50,7 @@
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   overflow: hidden;
 }
