--- a/src/app/alino-app/components/todo/task-card/task-card.module.css
+++ b/src/app/alino-app/components/todo/task-card/task-card.module.css
@@ -5,8 +5,8 @@
   height: fit-content;
   border-radius: 15px;
   display: flex;
-  justify-content: start;
-  align-items: start;
+  justify-content: flex-start;
+  align-items: flex-start;
   padding: 10px 15px 10px 0px;
   gap: 5px;
 }
@@ -23,7 +23,7 @@
   height: 100%;
   min-height: 30px;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
 
