--- a/src/components/ui/config-menu/config-card/ConfigCard.module.css
+++ b/src/components/ui/config-menu/config-card/ConfigCard.module.css
@@ -4,7 +4,7 @@
   height: 30px;
   border-radius: 5px;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   padding: 10px 15px 10px 15px;
   gap: 10px;
