--- a/src/components/ui/modal-options-box/optionBox/OptionBox.module.css
+++ b/src/components/ui/modal-options-box/optionBox/OptionBox.module.css
@@ -5,7 +5,7 @@
   cursor: pointer;
   transition: background-color 0.1s ease-in-out;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   padding-left: 10px;
   padding-right: 10px;
