--- a/src/components/ui/window-component/WindowComponent.module.css
+++ b/src/components/ui/window-component/WindowComponent.module.css
@@ -23,7 +23,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   background-color: var(--background-container);
   border-radius: 20px;
@@ -53,7 +53,7 @@
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
 
