--- a/src/components/ui/confirmation-modal/ConfirmationModal.module.css
+++ b/src/components/ui/confirmation-modal/ConfirmationModal.module.css
@@ -8,6 +8,7 @@
   justify-content: center;
   align-items: center;
   z-index: 900;
+  background-color: rgb(0, 0, 0, 0.3);
 }
 
 .confirmationModalContainer {
