--- a/src/app/alino-app/components/config-section/ConfigSection.module.css
+++ b/src/app/alino-app/components/config-section/ConfigSection.module.css
@@ -42,3 +42,14 @@
   height: 1px;
   background-color: var(--border-container-color);
 }
+
+.optionsBoxsContainer {
+  width: fit-content;
+  height: fit-content;
+  display: flex;
+  gap: 5px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  min-width: 200px;
+}
