fix(drag): fix drag-list-card position when is dragging

--- a/src/app/alino-app/components/sidebar/list-card/ListCard.module.css
+++ b/src/app/alino-app/components/sidebar/list-card/ListCard.module.css
@@ -169,6 +169,16 @@
   border-radius: 5px;
 }
 
+.moreOptions {
+  width: 23px;
+  height: 23px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--background-over-container);
+  border-radius: 5px;
+}
+
 .container:hover .counterDesktop {
   opacity: 0 !important;
 }
