--- a/src/components/ui/loader/loader.module.css
+++ b/src/components/ui/loader/loader.module.css
@@ -8,22 +8,23 @@
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.3);
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(5px);
   user-select: none;
   z-index: 1000;
+  padding: 15px;
 }
 
 .tooltip {
   position: absolute;
-  width: fit-content;
-  width: 400px;
+  width: calc(100% - 30px);
+  max-width: 400px;
   height: fit-content;
   height: fit-content;
   bottom: 10%;
   background-color: var(--background-container);
   border: 1px solid var(--border-container-color);
   padding: 20px 30px 20px 30px;
-  border-radius: 20px;
+  border-radius: 25px;
 }
 
 .tooltipHeader {
@@ -34,9 +35,9 @@
   background-color: var(--background-container);
   border: 1px solid var(--border-container-color);
   padding: 5px 15px;
-  border-radius: 10px;
+  border-radius: 15px;
   color: var(--text);
-  box-shadow: 0px 5px 10px rgb(0, 0, 0, 0.2);
+  box-shadow: 0px 5px 10px rgb(0, 0, 0, 0.15);
 }
 
 .text {
