--- a/src/app/alino-app/components/sidebar/folders/SortableFolder.module.css
+++ b/src/app/alino-app/components/sidebar/folders/SortableFolder.module.css
@@ -8,16 +8,22 @@
   cursor: pointer;
   background-color: var(--background-container);
   overflow: hidden;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .folderHeader {
   color: var(--text-not-available);
-  font-size: 12px;
+  font-size: 14px;
   margin: 0 0 0 5px;
-  font-weight: 500;
+  font-weight: 400;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .listWrapper {
@@ -30,6 +36,9 @@
   min-height: 45px;
   z-index: 1;
   margin-top: 10px;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .listWrapper p {
@@ -54,6 +63,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 5px;
 }
 
 .button {
