--- a/src/app/alino-app/components/sidebar/folders/SortableFolder.module.css
+++ b/src/app/alino-app/components/sidebar/folders/SortableFolder.module.css
@@ -2,7 +2,7 @@
   position: relative;
   border: 1px solid var(--border-container-color);
   border-radius: 15px;
-  padding: 10px;
+  padding: 5px 10px 5px 5px;
   transition: background-color 0.2s ease-in-out;
   min-height: 45px;
   cursor: pointer;
@@ -14,6 +14,7 @@
 }
 
 .folderHeader {
+  position: relative;
   color: var(--text-not-available);
   font-size: 14px;
   margin: 0 0 0 5px;
@@ -24,10 +25,21 @@
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  height: 33px;
+}
+
+.infoEditContainer {
+  position: relative;
+  display: flex;
+  gap: 5px;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  max-height: 31px;
 }
 
 .listWrapper {
-  min-height: 45px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -35,7 +47,7 @@
   gap: 5px;
   min-height: 45px;
   z-index: 1;
-  margin-top: 10px;
+  margin-top: 5px;
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
@@ -60,6 +72,7 @@
 }
 
 .buttonsContainer {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -67,6 +80,7 @@
 }
 
 .button {
+  position: relative;
   background-color: transparent;
   border: none;
   width: 23px;
@@ -76,13 +90,60 @@
   align-items: center;
 }
 
+.rightButtonsMobile {
+  display: flex;
+  gap: 5px;
+  justify-content: center;
+  align-items: center;
+}
+
+.moreConfigMenu {
+  opacity: 0;
+  position: absolute;
+  right: 0;
+  z-index: 1;
+}
+
+.folderContainer:hover .moreConfigMenu {
+  opacity: 1;
+}
+
+.counter {
+  position: absolute;
+  opacity: 1;
+  width: 23px;
+  height: 23px;
+  background-color: var(--background-over-container);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  right: 0;
+}
+
+.folderContainer:hover .counter {
+  opacity: 0;
+}
+
+.counterMobile {
+  position: relative;
+  opacity: 1;
+  width: 23px;
+  height: 23px;
+  background-color: var(--background-over-container);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+}
+
 .folderDropOverlay {
   position: absolute;
   inset: 0;
   z-index: 100;
   background: transparent;
   height: 100%;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   min-height: 45px;
 }
