--- a/src/app/alino-app/components/sidebar/folders/SortableFolder.module.css
+++ b/src/app/alino-app/components/sidebar/folders/SortableFolder.module.css
@@ -2,7 +2,7 @@
   position: relative;
   border: 1px solid var(--border-container-color);
   border-radius: 15px;
-  padding: 5px 10px 5px 5px;
+  padding: 5px 5px 5px 5px;
   transition: background-color 0.2s ease-in-out;
   min-height: 45px;
   cursor: pointer;
@@ -17,7 +17,7 @@
   position: relative;
   color: var(--text-not-available);
   font-size: 14px;
-  margin: 0 0 0 5px;
+  margin: 0 5px 0 5px;
   font-weight: 400;
   display: flex;
   align-items: center;
@@ -40,6 +40,7 @@
 }
 
 .listWrapper {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -61,10 +62,10 @@
 .listWrapper::before {
   content: "";
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: 5px;
+  left: -5px;
+  width: calc(100% + 10px);
+  height: calc(100% + 10px);
   background: linear-gradient(180deg, transparent 20%, var(--bgColor));
   opacity: 0.02;
   filter: saturate(200%);
