fix(all): general corrections

--- a/src/app/alino-app/components/sidebar/navbar/navbar.module.css
+++ b/src/app/alino-app/components/sidebar/navbar/navbar.module.css
@@ -100,7 +100,7 @@
 }
 
 .cardsContainer {
-  position: relative;
+  /* position: relative; */
   display: flex;
   flex-direction: column;
   gap: 5px;
