fix(folder): fix folder that would not open if the icon was clicked

--- a/src/components/ui/color-picker/folder-color-picker/FolderColorPicker.module.css
+++ b/src/components/ui/color-picker/folder-color-picker/FolderColorPicker.module.css
@@ -19,6 +19,10 @@
   height: 100%;
 }
 
+.mainButton.inactive {
+  pointer-events: none;
+}
+
 .renderIconContainer {
   display: flex;
   justify-content: center;
