--- a/src/app/alino-app/components/config-user/ConfigUser.module.css
+++ b/src/app/alino-app/components/config-user/ConfigUser.module.css
@@ -37,8 +37,29 @@
   margin-bottom: 10px;
 }
 
+.configUserIconEditorButton {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  bottom: -10px;
+  right: -10px;
+  background: none;
+  background-color: var(--text);
+  width: 30px;
+  height: 30px;
+  border: none;
+  border-radius: 100%;
+  cursor: pointer;
+  opacity: 0;
+  transition: opacity 0.1s ease-in-out;
+}
+
+.configUserIcon:hover .configUserIconEditorButton {
+  opacity: 1;
+}
+
 .userEditorContainer {
-  background-color: rgb(80, 59, 59);
   position: relative;
   width: 100%;
   height: fit-content;
@@ -50,4 +71,43 @@
 }
 
 .editionContainer {
+  position: relative;
+  width: 100%;
+  height: 45px;
+  border-radius: 15px;
+  color: var(--text);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.editionContainer h4 {
+  font-size: 16px;
+  font-weight: 400;
+}
+.editionContainer p {
+  font-size: 14px;
+  font-weight: 400;
+  color: var(--text-not-available);
+}
+.editionContainer button {
+  background: none;
+  background-color: transparent;
+  border: none;
+  color: var(--text);
+  padding: 10px 15px;
+  border-radius: 15px;
+  height: 100%;
+  max-height: 45px;
+  cursor: not-allowed;
+  transition: background-color 0.2s ease-in-out;
+  border: solid var(--text-not-available) 1px;
+}
+.editionContainer button:before {
+  content: "proximamente";
+  position: absolute;
+  top: -10px;
+  right: 15px;
+  height: 20px;
+  background-color: var(--background-container);
+  padding: 0px 10px;
 }
