--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@
   --background-card-dragged: rgb(230, 230, 230);
   --border-container-color: rgb(240, 240, 240);
   --hover-over-container: rgb(250, 250, 250);
-  --text: #1c1c1c;
+  --text: rgb(28, 28, 28);
   --text-not-available: #bbbbbb;
   --icon-color: #1c1c1c;
   --icon-colorv2: #1c1c1c;
@@ -26,7 +26,7 @@
   --background-card-dragged: rgb(60, 63, 69);
   --border-container-color: rgb(60, 63, 69);
   --hover-over-container: rgb(54, 57, 63);
-  --text: #ffffff;
+  --text: rgb(255, 255, 255);
   --text-not-available: #7a7a7a;
   --icon-color: #959ba3;
   --icon-colorv2: #fff;
