--- a/src/app/alino-app/components/sidebar/navbar/navbar.module.css
+++ b/src/app/alino-app/components/sidebar/navbar/navbar.module.css
@@ -1,9 +1,9 @@
 .mobileButton {
   position: absolute;
-  width: 40px;
-  height: 40px;
   top: 0;
   left: 0;
+  width: 40px;
+  height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,7 +14,7 @@
   z-index: 100;
 }
 
-.sidebarContainer {
+.navbarContainer {
   width: 25vw;
   min-width: 400px;
   height: 100%;
@@ -22,32 +22,26 @@
   justify-content: center;
   align-items: center;
   z-index: 100;
-  transform: translateX(-150%);
+  transform: translateX(0%);
   transition: transform 0.2s ease-in-out;
 }
 
-.sidebarContainer.open {
+.navbarContainer.open {
   transform: translateX(0%);
 }
 
-@media (min-width: 851px) {
-  .sidebarContainer {
-    transform: translateX(0);
-  }
-}
-
 .navbar {
-  overflow: hidden;
   position: relative;
   width: 100%;
   max-width: 1366px;
   height: 100%;
-  background-color: var(--background-container);
-  border-radius: 20px;
-  padding: 35px 0px 35px 0px;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   gap: 0px;
+  padding: 35px 0px 35px 0px;
+  background-color: var(--background-container);
+  border-radius: 20px;
   box-shadow:
     rgba(12, 20, 66, 0.02) 0px 4px 12px,
     rgba(12, 20, 66, 0.08) 0px 30px 80px,
@@ -57,9 +51,9 @@
 .navbar::before {
   content: "";
   position: absolute;
+  top: 55px;
   width: 100%;
   height: 20px;
-  top: 55px;
   overflow: hidden;
   z-index: 100;
   background: linear-gradient(var(--background-container) 50%, transparent);
@@ -68,9 +62,9 @@
 .navbar::after {
   content: "";
   position: absolute;
+  bottom: 80px;
   width: 100%;
   height: 20px;
-  bottom: 80px;
   overflow: hidden;
   z-index: 100;
   background: linear-gradient(transparent, var(--background-container) 50%);
@@ -82,9 +76,10 @@
   align-items: center;
   justify-content: center;
   height: fit-content;
+  opacity: 0.2;
 }
 
-.cardsSection {
+.elementsSection {
   position: relative;
   width: 100%;
   height: 100%;
@@ -95,15 +90,15 @@
   padding: 30px 15px 15px 15px;
 }
 
-.cardsSection::-webkit-scrollbar {
+.elementsSection::-webkit-scrollbar {
   display: none;
 }
 
 .cardsContainer {
+  height: fit-content;
   display: flex;
   flex-direction: column;
   gap: 5px;
-  height: fit-content;
 }
 
 .inputContainer {
@@ -112,11 +107,12 @@
 }
 
 @media only screen and (max-width: 850px) {
-  .sidebarContainer {
+  .navbarContainer {
     position: absolute;
     width: 85%;
     height: 100%;
     min-width: inherit;
+    transform: translateX(-150%);
   }
 
   .active {
