--- a/src/components/ui/calendar/Calendar.module.css
+++ b/src/components/ui/calendar/Calendar.module.css
@@ -1,4 +1,4 @@
-.button {
+.triggerButton {
   position: relative;
   border-radius: 5px;
   border: none;
@@ -7,10 +7,41 @@
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
   -webkit-tap-highlight-color: transparent;
+  width: auto;
+  aspect-ratio: 1 / 1;
+  height: 30px;
+  padding: 5px;
 }
 
-.button:hover {
+.triggerButton:hover {
   background-color: var(--background-over-container-hover) !important;
+}
+
+.titleContainer {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 5px;
+  height: 20px;
+}
+
+.titleContainer p {
+  font-size: 14px;
+  color: var(--text-not-available);
+}
+
+.backButton {
+  border: none;
+  width: fit-content;
+  height: 100%;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: none;
+  background-color: transparent;
+  border: none;
 }
 
 .notification {
@@ -30,7 +61,7 @@
   background-color: var(--background-container);
   border: 1px solid var(--border-container-color);
   width: fit-content;
-  width: 252px;
+  width: 256px;
   min-height: fit-content;
   border-radius: 15px;
   display: inline-flex;
@@ -51,7 +82,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 7px;
+  gap: 10px;
   width: 100%;
   height: 100%;
   flex-direction: column;
@@ -64,7 +95,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 15px;
+  gap: 30px;
 }
 
 .hourButtonOmit {
@@ -76,6 +107,7 @@
   transition: color 0.3s ease-in-out;
   -webkit-tap-highlight-color: transparent;
   padding: 0px 10px;
+  width: 100%;
 }
 
 .hourButtonOmit:hover {
@@ -90,9 +122,9 @@
   gap: 10px;
 }
 
-.supportButtons button {
+.supportButtonsElement {
   background-color: var(--background-over-container);
-  width: fit-content;
+  width: 100%;
   padding: 6px 13px;
   border-radius: 10px;
   border: solid 1px var(--border-container-color);
@@ -103,9 +135,10 @@
   transition:
     border 0.2s ease-in-out,
     background-color 0.3s ease-in-out;
+  text-wrap: nowrap;
 }
 
-.supportButtons button:hover {
+.supportButtonsElement:hover {
   background-color: var(--background-over-container-hover);
 }
 
