--- a/src/components/ui/calendar/Calendar.module.css
+++ b/src/components/ui/calendar/Calendar.module.css
@@ -1,47 +1,19 @@
 .triggerButton {
   position: relative;
-  border-radius: 5px;
+  width: auto;
+  height: 30px;
   border: none;
+  border-radius: 10px;
   background-color: var(--background-over-container);
   padding: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
   -webkit-tap-highlight-color: transparent;
-  width: auto;
   aspect-ratio: 1 / 1;
-  height: 30px;
-  padding: 5px;
 }
 
 .triggerButton:hover {
   background-color: var(--background-over-container-hover) !important;
-}
-
-.titleContainer {
-  width: 100%;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 5px;
-  height: 20px;
-}
-
-.titleContainer p {
-  font-size: 14px;
-  color: var(--text-not-available);
-}
-
-.backButton {
-  border: none;
-  width: fit-content;
-  height: 100%;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: none;
-  background-color: transparent;
-  border: none;
 }
 
 .notification {
@@ -56,7 +28,7 @@
   transition: opacity 0.3s ease-in-out;
 }
 
-.container {
+.calendarContainer {
   position: absolute;
   background-color: var(--background-container);
   border: 1px solid var(--border-container-color);
@@ -78,7 +50,7 @@
   overflow: hidden;
 }
 
-.optionsContainer {
+.contentContainer {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -86,7 +58,41 @@
   width: 100%;
   height: 100%;
   flex-direction: column;
-  padding: 10px 10px 10px 10px;
+  padding: 10px 0px;
+}
+
+.titleContainer {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 5px;
+  height: 20px;
+  padding: 0px 10px;
+}
+
+.titleContainer p {
+  font-size: 12px;
+  color: var(--text-not-available);
+}
+
+.backButton {
+  border: none;
+  width: fit-content;
+  height: 100%;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: none;
+  background-color: transparent;
+  border: none;
+}
+
+.divisor {
+  width: 100%;
+  height: 1px;
+  background-color: var(--border-container-color);
 }
 
 .hourPicker {
@@ -95,40 +101,24 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 30px;
-}
-
-.hourButtonOmit {
-  border: none;
-  background-color: transparent;
-  color: var(--text);
-  font-size: 16px;
-  cursor: pointer;
-  transition: color 0.3s ease-in-out;
-  -webkit-tap-highlight-color: transparent;
+  gap: 20px;
   padding: 0px 10px;
-  width: 100%;
-}
-
-.hourButtonOmit:hover {
-  color: #87189d;
 }
 
 .supportButtons {
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   gap: 10px;
 }
 
 .supportButtonsElement {
   background-color: var(--background-over-container);
-  width: 100%;
-  padding: 6px 13px;
+  padding: 5px 10px;
   border-radius: 10px;
   border: solid 1px var(--border-container-color);
-  font-size: 11px;
+  font-size: 10px;
   cursor: pointer;
   color: var(--text);
   -webkit-tap-highlight-color: transparent;
@@ -176,4 +166,11 @@
   background-color: #87189d;
   color: #fff;
   border: 1px solid transparent;
+}
+
+.datePicker {
+  padding: 0px 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
