--- a/src/components/ui/calendar/DayPicker.css
+++ b/src/components/ui/calendar/DayPicker.css
@@ -141,7 +141,7 @@
 .rdp-button_previous {
   border: none;
   background: none;
-  padding: 0;
+  padding: 5px 5px;
   margin: 0;
   cursor: pointer;
   font: inherit;
@@ -153,21 +153,12 @@
   justify-content: center;
   position: relative;
   appearance: none;
-
-  /* background-color: var(--background-over-container);
-  border: solid 1px var(--border-container-color);
-  border-radius: 10px; */
-
   -webkit-tap-highlight-color: transparent;
-
-  /* width: var(--rdp-nav_button-width);
-  height: var(--rdp-nav_button-height); */
 }
 
 .rdp-button_next:disabled,
 .rdp-button_previous:disabled {
   cursor: revert;
-
   opacity: var(--rdp-nav_button-disabled-opacity);
 }
 
@@ -291,7 +282,7 @@
 .rdp-selected {
   /* font-weight: bold; */
   /* font-size: large; */
-  color: var(--text) !important;
+  color: #ffffff !important;
 }
 
 .rdp-selected .rdp-day_button {
