--- a/src/components/ui/Checkbox/Checkbox.module.css
+++ b/src/components/ui/Checkbox/Checkbox.module.css
@@ -1,11 +1,17 @@
-.statusButton {
+.checkbox {
   display: flex;
   justify-content: center;
   align-items: center;
   border: none;
   background-color: transparent;
   cursor: pointer;
+  opacity: 1;
   transition: opacity 0.3s ease-in-out;
+}
+
+.checkbox:disabled {
+  opacity: 0.3;
+  cursor: default;
 }
 
 .svg {
@@ -14,4 +20,9 @@
   overflow: visible;
   transform: scale(1);
   transition: fill 0.1s ease-in-out;
+}
+
+.checkPath {
+  stroke: var(--icon-color-inside);
+  stroke-width: 2;
 }
