--- a/src/components/ui/dropdown/Dropdown.module.css
+++ b/src/components/ui/dropdown/Dropdown.module.css
@@ -1,8 +1,3 @@
-.dropdownContainer {
-  position: relative;
-  display: inline-block;
-}
-
 .triggerButton {
   position: relative;
   color: var(--text);
@@ -45,6 +40,8 @@
   display: flex;
   flex-direction: column;
   overflow: auto;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
 .items::-webkit-scrollbar {
