--- a/src/app/alino-app/components/sidebar/list-card/ListCard.module.css
+++ b/src/app/alino-app/components/sidebar/list-card/ListCard.module.css
@@ -17,6 +17,13 @@
   -ms-user-select: none;
   user-select: none;
   cursor: pointer;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  touch-action: none;
 }
 
 .containerDrag {
