--- a/src/components/ui/Calendar/HourPicker/HourPicker.module.css
+++ b/src/components/ui/Calendar/HourPicker/HourPicker.module.css
@@ -40,6 +40,7 @@
 
 .button:disabled {
   opacity: 0.5;
+  cursor: default;
 }
 
 .input {
@@ -61,6 +62,17 @@
   /* border: 1px solid var(--border-container-color); */
   /* border-radius: 10px; */
   -webkit-user-select: none;
+}
+.input[type="number"]::-webkit-outer-spin-button,
+.input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+.input[type="number"] {
+  -moz-appearance: textfield;
+  appearance: textfield;
 }
 
 .input:disabled {
