--- a/src/components/ui/EditTaskModal/EditTaskModal.module.css
+++ b/src/components/ui/EditTaskModal/EditTaskModal.module.css
@@ -27,12 +27,12 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  gap: 10px;
 }
 
 .moreOptions {
   background-color: var(--background-container);
-  position: absolute;
-  bottom: -50px;
+  position: relative;
   width: fit-content;
   border-radius: 15px;
   display: flex;
