--- a/src/components/ui/EditTaskModal/EditTaskModal.module.css
+++ b/src/components/ui/EditTaskModal/EditTaskModal.module.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.2);
   z-index: 500;
   display: flex;
 }
@@ -41,4 +41,8 @@
   overflow: hidden;
   gap: 10px;
   padding: 5px 5px;
+  box-shadow:
+    rgba(12, 20, 66, 0.02) 0px 4px 12px,
+    rgba(12, 20, 66, 0.08) 0px 30px 80px,
+    rgb(230, 233, 237) 0px 0px 0px 0px inset;
 }
