--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,27 @@
+@import "../../node_modules/react-grid-layout/css/styles.css";
+@import "../../node_modules/react-resizable/css/styles.css";
+
+.react-grid-item.react-grid-placeholder {
+  background: rgba(0, 0, 0, 0.438) none repeat scroll 0% 0%;
+  /* opacity: 0.07; */
+  transition-duration: 100ms;
+  z-index: 2;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  border-radius: 20px;
+  transition: all 500ms ease 0s !important;
+  will-change: transform;
+}
+
+.react-grid-item {
+  /* transition: transform 500ms ease 0s !important; */
+  transition: visibility 500ms ease 0s;
+  /* will-change: transform; */
+}
+
 :root {
   --background-alino-app: rgb(240, 240, 240);
   --background-alino-app-translucent: rgba(240, 240, 240, 0.5);
