--- a/src/components/ui/DraggableBentoGrid/DraggableBentoGrid.module.css
+++ b/src/components/ui/DraggableBentoGrid/DraggableBentoGrid.module.css
@@ -1,15 +1,13 @@
 .bentoContainer {
   width: 100%;
   height: 100%;
-  overflow-y: auto;
-  overflow-x: hidden;
+  /* overflow-y: auto; */
   padding: 10px;
-
-  scrollbar-width: none;
-  max-width: 800px;
+  /* scrollbar-width: none; */
+  /* min-height: 500px; */
 }
 
-.bentoContainer::-webkit-scrollbar {
+/* .bentoContainer::-webkit-scrollbar {
   width: 6px;
 }
 
@@ -25,7 +23,7 @@
 
 .bentoContainer::-webkit-scrollbar-thumb:hover {
   background-color: rgba(107, 114, 128, 0.7);
-}
+} */
 
 .bentoGrid {
   display: grid;
