--- a/src/app/alino-app/components/todo/HomeDashboard/parts/UpcomingTasks/UpcomingTasks.module.css
+++ b/src/app/alino-app/components/todo/HomeDashboard/parts/UpcomingTasks/UpcomingTasks.module.css
@@ -9,35 +9,5 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  overflow-y: auto;
-  height: 155px;
-  scrollbar-width: none;
-}
-
-.upcomingList {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  overflow-y: auto;
-  height: 155px;
-  scrollbar-width: thin; /* Firefox */
-  scrollbar-color: #888 transparent; /* Firefox */
-}
-
-/* Chrome, Edge y Safari */
-.upcomingList::-webkit-scrollbar {
-  width: 6px;
-}
-
-.upcomingList::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-.upcomingList::-webkit-scrollbar-thumb {
-  background-color: #888;
-  border-radius: 10px;
-}
-
-.upcomingList::-webkit-scrollbar-thumb:hover {
-  background-color: #555;
+  height: 100%;
 }
