--- a/src/app/alino-app/components/todo/HomeDashboard/parts/Summary/Summary.module.css
+++ b/src/app/alino-app/components/todo/HomeDashboard/parts/Summary/Summary.module.css
@@ -53,6 +53,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 10px;
+  height: 100%;
 }
 
 .completedStat,
@@ -61,7 +62,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  padding: 10px;
+  justify-content: center;
   border-radius: 15px;
   width: 100%;
 }
