--- a/src/components/ui/DraggableBentoGrid/DraggableBentoGrid.module.css
+++ b/src/components/ui/DraggableBentoGrid/DraggableBentoGrid.module.css
@@ -20,9 +20,10 @@
   border-radius: 20px;
   padding: 0;
   transition: all 0.2s ease-in-out;
-  box-shadow:
-    0 1px 3px 0 rgba(0, 0, 0, 0.1),
-    0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  /* box-shadow:
+    rgba(12, 20, 66, 0.02) 0px 4px 12px,
+    rgba(12, 20, 66, 0.08) 0px 30px 80px,
+    rgb(230, 233, 237) 0px 0px 0px 0px inset; */
   width: 100%;
   height: 100%;
   position: relative;
@@ -191,10 +192,6 @@
     min-height: 180px;
   }
 
-  .bentoContent {
-    padding: 1.25rem;
-  }
-
   .bentoTitle {
     font-size: 1rem;
     margin-bottom: 0.75rem;
@@ -219,10 +216,6 @@
   .bentoItem {
     border-radius: 16px;
     min-height: 160px;
-  }
-
-  .bentoContent {
-    padding: 1rem;
   }
 
   .bentoTitle {
