feat: add new functionalities & refactor

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,7 @@
   --background-alino-app: rgb(240, 240, 240);
   --background-alino-app-translucent: rgba(240, 240, 240, 0.5);
   --background-container: rgb(255, 255, 255);
+  --background-container-translucent: rgba(255, 255, 255, 0.5);
   --background-over-container: rgba(0, 0, 0, 0.025);
   --background-over-container-hover: rgba(0, 0, 0, 0.05);
   --background-card-dragged: rgb(230, 230, 230);
@@ -62,6 +63,7 @@
   --background-alino-app: rgb(36, 38, 41);
   --background-alino-app-translucent: rgba(36, 38, 41, 0.5);
   --background-container: rgb(44, 47, 53);
+  --background-container-translucent: rgba(44, 47, 53, 0.5);
   --background-over-container: rgba(255, 255, 255, 0.05);
   --background-over-container-hover: rgba(255, 255, 255, 0.1);
   --background-card-dragged: rgb(60, 63, 69);
