--- a/src/app/alino-app/components/todo/HomeDashboard/parts/NewFeatures/NewFeatures.module.css
+++ b/src/app/alino-app/components/todo/HomeDashboard/parts/NewFeatures/NewFeatures.module.css
@@ -57,7 +57,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  padding: 10px;
+  padding: 10px 15px;
   background: linear-gradient(
     135deg,
     rgba(59, 130, 246, 0.05) 0%,
@@ -197,7 +197,7 @@
 .date {
   position: absolute;
   bottom: 10px;
-  left: 10px;
+  left: 15px;
   font-size: 10px;
   font-weight: 700;
   color: var(--text-not-available);
