--- a/src/app/alino-app/components/todo/HomeDashboard/parts/Summary/Summary.module.css
+++ b/src/app/alino-app/components/todo/HomeDashboard/parts/Summary/Summary.module.css
@@ -5,6 +5,10 @@
   height: 100%;
   width: 100%;
   padding: 10px;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 .summaryMain {
