--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,7 @@
   /* will-change: transform; */
 }
 
-.react-grid-item > .react-resizable-handle {
+/* .react-grid-item > .react-resizable-handle {
   position: absolute;
   width: 50px;
   height: 50px;
@@ -37,7 +37,7 @@
 .react-grid-item > .react-resizable-handle::after {
   content: "";
   display: none;
-}
+} */
 
 :root {
   --background-alino-app: rgb(240, 240, 240);
