--- a/src/app/alino-app/components/todo/HomeDashboard/parts/NewFeatures/NewFeatures.module.css
+++ b/src/app/alino-app/components/todo/HomeDashboard/parts/NewFeatures/NewFeatures.module.css
@@ -202,3 +202,101 @@
   font-weight: 700;
   color: var(--text-not-available);
 }
+
+.newFeatures:hover .showMore {
+  opacity: 1;
+}
+
+.showMore {
+  position: absolute;
+  bottom: 10px;
+  right: 15px;
+  background: none;
+  border: none;
+  color: #ffffff;
+  background-color: rgba(0, 0, 0, 0.2);
+  padding: 5px 10px;
+  border-radius: 99px;
+  cursor: pointer;
+  opacity: 0;
+  font-size: 10px;
+  transition:
+    transform 0.1s ease-in-out,
+    opacity 0.1s ease-in-out;
+}
+
+.showMore:hover {
+  transform: scale(1.05);
+}
+
+.modal {
+  position: relative;
+  max-width: 500px;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+}
+
+.modalContent {
+  position: relative;
+  display: flex;
+  height: 100%;
+  width: 100%;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 5px;
+  padding: 15px 15px 5px 15px;
+}
+
+.modalContent::after {
+  content: "";
+  position: absolute;
+  top: -40px;
+  left: 0;
+  width: 100%;
+  height: 40px;
+  background: linear-gradient(
+    0deg,
+    var(--background-container) 10%,
+    transparent 80%
+  );
+}
+
+.modalTitle {
+  color: var(--text);
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.modalText {
+  color: var(--text);
+  font-size: 14px;
+  font-weight: 300;
+  opacity: 0.8;
+}
+
+.footer {
+  width: 100%;
+  padding: 10px 0;
+  display: flex;
+  justify-content: flex-start;
+  margin-top: 10px;
+}
+
+.footer button {
+  background: none;
+  border: none;
+  background-color: rgb(0, 153, 255);
+  padding: 8px 15px;
+  border-radius: 10px;
+  color: #ffffff;
+  font-size: 14px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+@media (max-width: 850px) {
+  .showMore {
+    opacity: 1 !important;
+  }
+}
