--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,22 +22,34 @@
   /* will-change: transform; */
 }
 
-/* .react-grid-item > .react-resizable-handle {
+.react-grid-item:hover > .react-resizable-handle {
+  opacity: 1;
+}
+
+.react-grid-item > .react-resizable-handle {
   position: absolute;
-  width: 50px;
-  height: 50px;
   pointer-events: auto;
+  background-image: none;
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+  width: 35px;
+  height: 35px;
+}
+
+.react-grid-item > .react-resizable-handle:active {
+  opacity: 1 !important;
 }
 
 .react-grid-item > .react-resizable-handle.react-resizable-handle-se {
-  bottom: -20px;
-  right: -20px;
+  bottom: -10px;
+  right: -10px;
+  z-index: 1;
 }
 
 .react-grid-item > .react-resizable-handle::after {
   content: "";
   display: none;
-} */
+}
 
 :root {
   --background-alino-app: rgb(240, 240, 240);
